[project]
name = "vartrix"
version = "0.5.0"
description = "Easily manange and automate variables and parameters."
authors = [{ name = "Reuben Rusk", email = "pythoro@mindquip.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Reuben Rusk", email = "pythoro@mindquip.com" }]
keywords=[
	"PARAMETERS",
	"VARIABLES",
	"PARAMETRIC",
	"AUTOMATION",
	"AUTOMATE",
]
classifiers=[
	"Programming Language :: Python :: 3",
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Natural Language :: English",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.17.2",
    "pandas>=0.25.1",
    "ruamel-yaml>=0.16.5",
]

[project.urls]
Homepage = "https://github.com/pythoro/vartrix.git"
Repository = "https://github.com/pythoro/vartrix.git"
Documentation = "https://vartrix.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "bump2version>=1.0.1",
    "matplotlib>=3.9.2",
    "ruff>=0.9.6",
]

[tool.hatch.build.targets.sdist]
include = ["vartrix"]

[tool.hatch.build.targets.wheel]
include = ["vartrix"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"